--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+button {
+  border: none;
+  background: none;
+}
 .game {
   display: flex;
   flex-direction: column;
@@ -11,5 +14,21 @@
   &__score {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 1rem 0;
+  }
+  canvas {
+    margin-bottom: 1rem;
+  }
+  &__controls {
+    max-width: 250px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    button {
+      flex: 0 1 25%;
+      font-size: 1.3rem;
+      background-color: greenyellow;
+    }
   }
 }
